Fix background image not showing

--- a/scss/layout/header/_header.scss
+++ b/scss/layout/header/_header.scss
@@ -1,5 +1,5 @@
 header{
-    background: url("../../../images/background1.jpg");
+    background: url("../images/background1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
