--- a/scss/pages/servicePage/styles.css
+++ b/scss/pages/servicePage/styles.css
@@ -1,5 +1,5 @@
 header {
-  background: url("../../../images/page-title.jpg");
+  background: url("../images/page-title.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 60vh;
