--- a/scss/styles.css
+++ b/scss/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 header {
-  background: url("../../../images/background1.jpg");
+  background: url("../images/background1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
